2003-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in (modular): do not depend on exporting, modprep, clisp.h
	(anymodule): depend on exporting, modprep, clisp.h

2003-08-25  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* utils/comment5.c (main): handle #s in traditional comments.
	* makemake.in : do not treat pathname.d specially.

2003-08-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (MODULESDIR, MODULESDIR_, MODULESDIR_M): new vars
	(exporting.fas): depend on ${MODULESDIR_M}exporting.lisp, not the link
	(modular): depend on clisp.h
	* configure: do not link plain files in modules (exporting will
	picked up from here); link modules/* directories even when
	building without FFI because many modules (regexp, syscalls,
	dirkey, clx/new-clx) do not require FFI

2003-08-22  Sam Steingold  <sds@gnu.org>

	* init.lisp (defun): reverted the 2003-08-12 patch: cannot parse
	the signature at macroexpand time, FUNCTION should see it first
	for proper error reporting

2003-08-21  Sam Steingold  <sds@gnu.org>

	* utils/modprep.c: rewrote in lisp
	* modules/regexp/regexi.c (REGEXP-COMPILE): pass a subr instead
	of a symbol to FINALIZE (supported by modprep.lisp)

2003-08-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (create-fun-obj, c-LOAD-TIME-VALUE): use
	*fasoutput-stream* instead of *compiling-from-file* to check
	whether the constant will be read before being evaluated
	- necessary for the recent COMPILE-FORM-IN-TOPLEVEL-ENVIRONMENT change
	Reported by Douglas Philips <dgou@mac.com>
	<http://article.gmane.org/gmane.lisp.clisp.general/7393>

2003-08-18  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (set-logical-pathname-translations): missing slots
	default to :WILD, as per ANSI CL
	* pathname.d (MAKE-LOGICAL-PATHNAME): upcase host
	(host_match, nametype_match_aux, subdir_match, version_match)
	(version_diff, translate_subdir, translate_version):
	merge identical LOGICAL and PHYSICAL code
	(translate_nametype_aux): do not replace NIL with ""
